# cpp_extensions

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE.md  README.md
public/include/cpp_extensions/: all.hpp  barrier.hpp  binary_semaphore.hpp  condition_variable.hpp  counting_semaphore.hpp  debugger.hpp  intrinsics.hpp  latch.hpp  make_shared_lock.hpp  make_unique_lock.hpp  manual_semaphore.hpp  mutex.hpp  prolog.hpp  recursive_mutex.hpp  recursive_shared_mutex.hpp  recursive_shared_timed_mutex.hpp  recursive_timed_mutex.hpp  shared_mutex.hpp  shared_timed_mutex.hpp  spin_lock.hpp  spin_yield.hpp  thread.hpp  timed_mutex.hpp
public/include/cpp_extensions/debugger/: debugger.hpp
public/include/cpp_extensions/debugger/detail/: debugger_config.hpp  debugger_detect_apple_xnu_kernel_sysctl.hpp  debugger_detect_linux_procfs.hpp  debugger_detect_windows_api.hpp  debugger_interrupt_gcc_clang_intrinsics.hpp  debugger_interrupt_windows_api.hpp  debugger_support_methods_configuration.hpp
public/include/cpp_extensions/detail/: disable_compiler_warnings.hpp
public/include/cpp_extensions/thread/: checked_condition_variable.hpp  checked_mutex.hpp  checked_recursive_mutex.hpp  checked_recursive_shared_mutex.hpp  checked_recursive_shared_timed_mutex.hpp  checked_recursive_timed_mutex.hpp  checked_shared_mutex.hpp  checked_shared_timed_mutex.hpp  checked_spin_lock.hpp  checked_timed_mutex.hpp  fast_barrier.hpp  fast_binary_semaphore.hpp  fast_condition_variable.hpp  fast_counting_semaphore.hpp  fast_latch.hpp  fast_manual_semaphore.hpp  fast_mutex.hpp  fast_recursive_mutex.hpp  fast_recursive_shared_mutex.hpp  fast_recursive_shared_timed_mutex.hpp  fast_recursive_timed_mutex.hpp  fast_shared_mutex.hpp  fast_shared_timed_mutex.hpp  fast_spin_lock.hpp  fast_timed_mutex.hpp  manual_semaphore.hpp  recursive_shared_mutex.hpp  recursive_shared_timed_mutex.hpp  spin_lock.hpp  spin_yield.hpp
public/include/cpp_extensions/thread/detail/: checked_mutex_config.hpp  checked_shared_lock_timed_tracker.hpp  checked_shared_lock_tracker.hpp  checked_synchronization_objects_configuration.hpp  checked_unique_lock_timed_tracker.hpp  checked_unique_lock_tracker.hpp
tests/: CMakeLists.txt  test_lock.cpp
